--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,36 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  src: url="https://use.typekit.net/qht0ycs.css";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: big-calson-fb, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+  
+.CaslonBoldItalic {
+  font-family: big-calson-fb, serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.CaslonBold {
+  font-family: big-calson-fb, serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.CaslonRegular {
+  font-family: big-caslon-fb, serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.CaslonItalic {
+  font-family: big-caslon-fb, serif;
+  font-weight: 400;
+  font-style: italic;
 }
